First iteration of the burger assembly view.
Added the class BurgerAssemblyViewImpl, that manages the UI fore the assembly scene, and the relative controller class.
Added a removeLastIngredient to Hamburger class.